Fixed utility spells not showing. Components show as words.

--- a/dndstyling.css
+++ b/dndstyling.css
@@ -79,6 +79,10 @@ p {
     margin: auto;
 }
 
+.spell-item a {
+    display: flex;
+    justify-content: center;
+}
  
 
  
